Finalize QuickByte application and Docker setup